5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1592_2043.log
== SUBMITION (2019-03-25 14:32:19) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = a*1+b*2+c*3+d*4/10
print(round(x,2))
-- EXECUTION TIME:
0.192666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = a*1+b*2+c*3+d*4/10
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:32:56) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
x = a*1+b*2+c*3+d*4/10
print(round(x,2))
-- EXECUTION TIME:
0.203852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:01) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
x = (a*1+b*2+c*3+d*4/10)
print(round(x,2))
-- EXECUTION TIME:
0.172766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:46) 
-- CODE:
a = input(int())
b = input(int())
c = input(int())
x = a*1+b*2+c*3+d*4/10
print(round(x,2))
-- EXECUTION TIME:
0.175249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = a*1+b*2+c*3+d*4/10
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:04) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = a*1+b*2+c*3+d*4/10
print(round(x,2))
-- EXECUTION TIME:
0.168052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = a*1+b*2+c*3+d*4/10
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:22) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = (a*1+b*2+c*3+d*4/10)
print(round(x,2))
-- EXECUTION TIME:
0.105882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = (a*1+b*2+c*3+d*4/10)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:15) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = (a*1+b*2+c*3+d*4)/(10)
print(round(x,2))
-- EXECUTION TIME:
0.140685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = (a*1+b*2+c*3+d*4)/(10)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:23) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = (a*1+b*2+c*3+d*4)/10
print(round(x,2))
-- EXECUTION TIME:
0.185636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = (a*1+b*2+c*3+d*4)/10
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:57) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
x = ((a*1+b*2+c*3+d*4)/10)
print(round(x,2))
-- EXECUTION TIME:
0.16998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 4, in <module>
    x = ((a*1+b*2+c*3+d*4)/10)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:42:09) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
x = ((a * 1+ b * 2+ c *3+ d * 4)/10)
print(round(x,2))
-- EXECUTION TIME:
0.197809
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
